--- a/national_park_explorer/templates/index.html
+++ b/national_park_explorer/templates/index.html
@@ -13,6 +13,8 @@
         <meta property="og:type" content="Website" />
         <meta name="image" property="og:image" content="" />
         <meta name="description" property="og:description" content="Marshall's Coding Portfolio" />
+	
+	<link rel="stylesheet" type='text/css' href="{% static 'national_park_explorer/styles.css' %}">	
 
         <title>Marshall's Portfolio</title>
     </head>
