--- a/national_park_explorer/templates/index.html
+++ b/national_park_explorer/templates/index.html
@@ -19,6 +19,6 @@
         <title>Marshall's Portfolio</title>
     </head>
     <body>
-        <h1>Django api running...</h1>
+        <h1 class="header">Django api running...</h1>
     </body>
 </html>
